# strategy-game

./: .gitignore  CMakeLists.txt  README.md
data/: sound.json
src/: MainLoop.cpp  MainLoop.hpp  main.cpp
src/HUD/: Box.cpp  Box.hpp  Button.cpp  Button.hpp  Component.cpp  Component.hpp  Draggable.cpp  Draggable.hpp  DynamicText.cpp  DynamicText.hpp  Font.hpp  Image.cpp  Image.hpp  Interactable.cpp  Interactable.hpp  Layer.cpp  Layer.hpp  Text.cpp  Text.hpp
src/HUD/game/: BuyButton.cpp  BuyButton.hpp
src/HUD/layers/: InGame.cpp  InGame.hpp  InventoryLayer.cpp  InventoryLayer.hpp
src/SDL/: App.cpp  App.hpp  Chunk.cpp  Chunk.hpp  Font.cpp  Font.hpp  Renderer.cpp  Renderer.hpp  Surface.cpp  Surface.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp
src/components/: Animation.hpp  Circle.hpp  Collider.hpp  Line.hpp  Movement.hpp  Polygon.hpp  Position.hpp  Rectangle.hpp  Relationship.hpp  Sound.hpp  Sprite.hpp  Zone.hpp
src/components/game/: Allied.hpp  BuildingInfo.hpp  BulletInfo.hpp  Enemy.hpp  Selected.hpp  Unit.hpp  UnitInfo.hpp  Waypoint.hpp
src/components/tags/: Base.hpp
src/entities/: Building.cpp  Building.hpp  Bullet.cpp  Bullet.hpp  Infantry.cpp  Infantry.hpp  Units.cpp  Units.hpp  Zones.cpp  Zones.hpp
src/game/: Data.cpp  Data.hpp  Shop.cpp  Shop.hpp
src/systems/: AnimationSystem.cpp  AnimationSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/systems/game/: BuildingsFiring.cpp  BuildingsFiring.hpp  BulletSystem.cpp  BulletSystem.hpp  EnemyMovement.cpp  EnemyMovement.hpp  EnemySystem.cpp  EnemySystem.hpp  UnitSystem.cpp  UnitSystem.hpp  ZoneSystem.cpp  ZoneSystem.hpp
src/utils/: Color.hpp  Infos.cpp  Infos.hpp  Random.cpp  Random.hpp  Rect.hpp  SoundLoader.cpp  SoundLoader.hpp  TexturesLoader.cpp  TexturesLoader.hpp  Timer.cpp  Timer.hpp  TransformUtils.cpp  TransformUtils.hpp  Vec.hpp  WinInfo.cpp  WinInfo.hpp
